add shops list
